--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>НАЗВА Сайту</title>
   </head>
   <body>
-    шапка зміст корінь
+    <h1>шапка</h1>
+    зміст корінь
   </body>
 </html>
