--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <title>НАЗВА Сайту</title>
   </head>
   <body>
-    <h1>шапка</h1>
-    зміст корінь
+    <header>
+      <nav>
+        <a href="/">
+          <img src="./images/Web Studio.svg" alt="Web Studio" />
+        </a>
+        <ul class="navigation">
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="contact">
+        <li>
+          <a href="mailto:info@devstudio.com">
+            <img src="./images/E-mail.svg" alt="@" />info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/tell.svg" alt="tell" />+38 096 111 11 11</a
+          >
+          <!--перевір як телефон обгортається-->
+        </li>
+        </li>
+      </ul>
+    </header>
+    <div>kartynk-fon</div>
   </body>
 </html>
