--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>НАЗВА Сайту</title>
+    <title>Web Studio</title>
   </head>
   <body>
     <header>
@@ -25,14 +25,61 @@
           >
         </li>
         <li>
-          <a href=""
-            ><img src="./images/tell.svg" alt="tell" />+38 096 111 11 11</a
-          >
-          <!--перевір як телефон обгортається-->
+          <a href="tel:+38 096 111 11 11"
+            ><img src="./images/tell.svg" alt="tell" />+38 096 111 11 11</a>
         </li>
         </li>
       </ul>
     </header>
-    <div>kartynk-fon</div>
+
+    <div>
+      <section class="baner">
+        <h1 lang="ru">Эффективные решения <br> для вашего бизнеса</h1> 
+        <button lang="ru">Заказать услугу</button>
+      </section>
+    </div>
+
+    <section class="our advantages">
+      <h2 lang="ru">наши преимущества</h2> <!--приховати через CSS-->
+      <ul>
+         <li> 
+           <img src="./images/antenna 1.svg" alt="antenna" width="65" height="70">
+            <h3 lang="ru">Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p> 
+          </li>
+         <li> 
+           <img src="./images/clock 1.svg" alt="clock 1"> 
+           <h3 lang="ru">Пунктуальность</h3>
+           <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+         <li>
+           <img src="./images/diagram 1.svg" alt="diagram 1">
+           <h3>Планирование</h3>
+           <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+         <li>
+           <img src="./images/astronaut 1.svg" alt="astronaut">
+           <h3 lang="ru">Современные технологии</h3>
+           <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+         </li>
+      </ul> 
+    </section>
+    <section class="our_products">
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li><img src="./images/Desktop.svg" alt="Desktop" width="370" height="294"><h3>Десктопные приложения</h3></li>
+        <li><img src="./images/mobile.svg" alt="mobile" width="370" height="294"><h3>Мобильные приложения</h3></li>
+        <li><img src="./images/design.svg" alt="design" width="370" height="294"><h3>Дизайнерские решения</h3></li>
+        </ul>
+    </section>
+    <section class="our_team">
+      <h2>Наша команда</h2>
+      <ul>
+        <li><img src="./images/Nykolay.svg" alt="foto_Nykolay" width="270" height="260"><h3>Николай Кучеренко</h3><p>Product Designer</p></li>
+        <li><img src="./images/Olga.svg" alt="foto_Olga" width="270" height="260"><h3>Ольга Иванова</h3><p>Frontend Developer</p></li>
+        <li><img src="./images/Andriy.svg" alt="foto_Andriy" width="270" height="260"><h3>Андрей Шевченко</h3><p>Marketing</p></li>
+        <li><img src="./images/Ivan.svg" alt="fot_Ivan"><h3>Иван Николаев</h3><p>UI Designer</p></li>
+      </ul>
+    </section>
   </body>
 </html>
