+іконки на соц мережі
добавиі іконки на соц мережі для членів команди

--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
           </li>
         </ul>
       </section>
+      <!-- секция Чем мы занимаемся-->
       <section class="our_products">
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
-              src="./images/Desktop.svg"
+              src="./images/Desktop.jpg"
               alt="Desktop"
               width="370"
               height="294"
@@ -101,7 +102,7 @@
           </li>
           <li>
             <img
-              src="./images/mobile.svg"
+              src="./images/mobile.jpg"
               alt="mobile"
               width="370"
               height="294"
@@ -110,7 +111,7 @@
           </li>
           <li>
             <img
-              src="./images/design.svg"
+              src="./images/design.jpg"
               alt="design"
               width="370"
               height="294"
@@ -119,43 +120,158 @@
           </li>
         </ul>
       </section>
+      <!--section our team-->
       <section class="our_team">
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img
-              src="./images/Nykolay.svg"
+              src="./images/Nykolay.jpg"
               alt="foto_Nykolay"
               width="270"
               height="260"
             />
             <h3>Николай Кучеренко</h3>
             <p>Product Designer</p>
+            <!--блок соц мережі start -->
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/Instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./images/Twitter.svg" alt="Twitter" />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/faceboock.svg" alt="faceboock"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/in.svg" alt="in" /></a>
+              </li>
+            </ul>
+            <!--блок соц мережі end -->
           </li>
           <li>
             <img
-              src="./images/Olga.svg"
+              src="./images/Olga.jpg"
               alt="foto_Olga"
               width="270"
               height="260"
             />
             <h3>Ольга Иванова</h3>
             <p>Frontend Developer</p>
+            <!--блок соц мережі start -->
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/Instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./images/Twitter.svg" alt="Twitter" />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/faceboock.svg" alt="faceboock"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/in.svg" alt="in" /></a>
+              </li>
+            </ul>
+            <!--блок соц мережі end -->
           </li>
           <li>
             <img
-              src="./images/Andriy.svg"
+              src="./images/Andriy.jpg"
               alt="foto_Andriy"
               width="270"
               height="260"
             />
             <h3>Андрей Шевченко</h3>
             <p>Marketing</p>
+            <!--блок соц мережі start -->
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/Instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./images/Twitter.svg" alt="Twitter" />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/faceboock.svg" alt="faceboock"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/in.svg" alt="in" /></a>
+              </li>
+            </ul>
+            <!--блок соц мережі end -->
           </li>
           <li>
-            <img src="./images/Ivan.svg" alt="fot_Ivan" />
+            <img src="./images/Ivan.jpg" alt="fot_Ivan" />
             <h3>Иван Николаев</h3>
             <p>UI Designer</p>
+            <!--блок соц мережі start -->
+            <ul>
+              <li>
+                <a href=""
+                  ><img src="./images/Instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./images/Twitter.svg" alt="Twitter" />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./images/faceboock.svg" alt="faceboock"
+                /></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/in.svg" alt="in" /></a>
+              </li>
+            </ul>
+            <!--блок соц мережі end -->
+          </li>
+        </ul>
+      </section>
+      <!--SECTION constant customers-->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href=""><img src="./images/YA&CO.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/Company_Tag_Line_Here.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/Company.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/Foster_Peters.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/Brand.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/Company_Tag_Line.svg" alt="" /></a>
           </li>
         </ul>
       </section>
