виправив посилання на соц мережі
виправив посилання на соц мережі
контрольне збереження

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <a href="Заказатьуслугу">Заказать услугу</a>
+          <a href="Ссылка_на_Заказатьуслугу">Заказать услугу</a>
           <!--<button lang="ru">Заказать услугу</button>-->
         </section>
       </div>
@@ -227,22 +227,22 @@
             <!--блок соц мережі start -->
             <ul>
               <li>
-                <a href=""
+                <a href="Instagram:"
                   ><img src="./images/Instagram.svg" alt="Instagram"
                 /></a>
               </li>
               <li>
-                <a href="">
+                <a href="Twitter:">
                   <img src="./images/Twitter.svg" alt="Twitter" />
                 </a>
               </li>
               <li>
-                <a href=""
+                <a href="faceboock:"
                   ><img src="./images/faceboock.svg" alt="faceboock"
                 /></a>
               </li>
               <li>
-                <a href=""><img src="./images/in.svg" alt="in" /></a>
+                <a href="in:"><img src="./images/in.svg" alt="in" /></a>
               </li>
             </ul>
             <!--блок соц мережі end -->
