добабив arial-label в футері
добабив arial-label на соцмережі в футері в  body лишилось через iimg

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,11 @@
   <body>
     <header>
       <nav>
-        <a href="/">
-          <img src="./images/WebStudio.svg" alt="Web Studio" />
+        <a href="./index.html">
+          <p>  Web <span class="logotype">Studio </span> </p>
+          <!-- <img src="./images/WebStudio.svg" alt="Web Studio" /> -->
         </a>
+        
         <ul class="navigation">
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -254,31 +256,62 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/YA&CO.svg" alt="" /></a>
+            <a href=""><img src="./images/YA&CO.svg" alt="logotype YA&CO" /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/Company_Tag_Line_Here.svg" alt=""
+              ><img src="./images/Company_Tag_Line_Here.svg" alt="logotype Company_Tag_Line_Here"
             /></a>
           </li>
           <li>
-            <a href=""><img src="./images/Company.svg" alt="" /></a>
+            <a href=""><img src="./images/Company.svg" alt="logotype Company" /></a>
           </li>
           <li>
-            <a href=""><img src="./images/Foster_Peters.svg" alt="" /></a>
+            <a href=""><img src="./images/Foster_Peters.svg" alt="logotype Foster_Peters" /></a>
           </li>
           <li>
-            <a href=""><img src="./images/Brand.svg" alt="" /></a>
+            <a href=""><img src="./images/Brand.svg" alt="logotype Brand" /></a>
           </li>
           <li>
-            <a href=""><img src="./images/Company_Tag_Line.svg" alt="" /></a>
+            <a href=""><img src="./images/Company_Tag_Line.svg" alt="logotype Company_Tag_Line" /></a>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      футер
+      <p>
+        футер
+      </p> 
+      <!--блок з адресою-->
+      <div>
+       <a href="./index.html"> <img src="./images/WebStudio.svg" alt="logo WebStudio"></a>
+       <address>г.Киев, пр-т Л.Украинки, 26
+       </address>
+      <address>
+         <a href="mailto:info@example.com">info@example.com</a> <br>
+         <a href="tell:+38 099 111 11 11">+38 099 111 11 11</a>
+       </address>
+      </div>
+      <!--блок з соцмережами-->
+      <div>
+        <p><b> присоединяйтесь</b></p>
+        <ul>
+          <li> <a href="" aria-label="link to Instagram">значок Instagram</a></li>
+          <li> <a href="" aria-label="link to Twitter">значок</a></li>
+          <li> <a href="" aria-label="link to faceboock">значок</a></li>
+          <li> <a href="" aria-label="link to in">значок</a></li>
+        </ul>
+      </div>
+      <!--блок на підписку-->
+      <div>
+        <p> <b>Подпишитесь на рассылку</b> </p>
+        <input type="text">
+        <a href="">Подписаться <img src="./images/telegram.svg" alt="images_telegram" width="24" ></a>
+        <input type="button" value="Подписаться" img src="./images/telegram.svg" alt="images_telegram" width="24" >
+      </div>
+       <input type="image" src="./images/telegram.svg" alt="">
     </footer>
-  </body>
+    
+    </body>
 </html>
