прознав через валідатор

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
        </address>
       <address>
          <a href="mailto:info@example.com">info@example.com</a> <br>
-         <a href="tell:+38 099 111 11 11">+38 099 111 11 11</a>
+         <a href="tell:+380991111111">+38 099 111 11 11</a>
        </address>
       </div>
       <!--блок з соцмережами-->
@@ -308,9 +308,10 @@
         <p> <b>Подпишитесь на рассылку</b> </p>
         <input type="text">
         <a href="">Подписаться <img src="./images/telegram.svg" alt="images_telegram" width="24" ></a>
-        <input type="button" value="Подписаться" img src="./images/telegram.svg" alt="images_telegram" width="24" >
+        <input type="button" value="Подписаться"> 
+        <img src="./images/telegram.svg" alt="images_telegram" width="24"> 
       </div>
-       <input type="image" src="./images/telegram.svg" alt="">
+       <input type="image" src="./images/telegram.svg" alt="icon telegram">
     </footer>
     
     </body>
